--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "AutoFill Extension",
   "version": "1.0",
   "description": "Autofills information on websites.",
-  "permissions": ["storage", "activeTab"],
-    "browser_action": {
-      "default_icon": "totoro.png",
-      "default_popup": "popup.html"
-    },
-    "default_popup": "popup.html",
+  "permissions": ["storage", "activeTab", "webNavigation"],
+  "action": {
+    "default_icon": "totoro.png",
+    "default_popup": "popup.html"
+  },
+  "background": {
+    "service_worker": "src/background.js"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -16,3 +18,4 @@
     }
   ]
 }
+
